--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -30,9 +30,9 @@
             <td>{% trans 'TTL' %}</td>
         </tr>
         <tr>
-            <td><input class="form-control form-control-sm" type="text" name="name" value="{{ name }}">.{{ idn_zone_name ?: zone_name }}</td>
+            <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="{{ name }}">.{{ idn_zone_name ?: zone_name }}</td>
             <td>IN</td>
-            <td>
+            <td class="col-sm-1">
                 <select class="form-select form-select-sm" name="type">
                     {% for record_type in types %}
                     {% set add = '' %}
@@ -48,8 +48,8 @@
             <td><input class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required>
                 <div class="invalid-feedback">{% trans 'Provide content' %}</div>
             </td>
-            <td><input class="form-control form-control-sm" type="text" name="prio" value="{{ prio }}"></td>
-            <td><input class="form-control form-control-sm" type="text" name="ttl" value="{{ ttl }}"></td>
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="prio" value="{{ prio }}"></td>
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="ttl" value="{{ ttl }}"></td>
         </tr>
     </table>
     <br>
