--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -54,7 +54,12 @@
     </table>
     <br>
     <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans 'Add record' %}">
+
     {% if not is_reverse_zone and iface_add_reverse_record %}
-    <input class="form-check-input" type="checkbox" name="reverse"><span class="text-secondary"> {% trans 'Add also reverse record' %}</span>
+    <span class="align-middle">
+        &nbsp;
+        <input class="form-check-input" type="checkbox" name="reverse">
+        <span class="text-secondary"> {% trans 'Add also reverse record' %}</span>
+    </span>
     {% endif %}
 </form>
