--- a/templates/edit.html
+++ b/templates/edit.html
@@ -101,9 +101,9 @@
             {% else %}
             <td>
                 <a class="btn btn-outline-primary btn-sm" href="edit_record.php?id={{ r['id'] }}&domain={{ zone_id }}">
-                    <i class="bi bi-pencil-square"></i> {% trans 'Edit record' %}</a>
+                    <i class="bi bi-pencil-square"></i> {% trans 'Edit' %}</a>
                 <a class="btn btn-outline-danger btn-sm" href="delete_record.php?id={{ r['id'] }}&domain={{ zone_id }}">
-                    <i class="bi bi-trash"></i> {% trans 'Delete record' %}</a>
+                    <i class="bi bi-trash"></i> {% trans 'Delete' %}</a>
             </td>
             {% endif %}
 
@@ -189,9 +189,10 @@
         </tr>
     </table>
     <input class="btn btn-outline-secondary btn-sm" type="submit" name="commit" value="{% trans 'Add record' %}">
-    {% if rev %}
-    &nbsp;
+
+    {% if not is_reverse_zone and rev %}
     <span class="align-middle">
+        &nbsp;
         <input class="form-check-input" type="checkbox" name="reverse">
         <span class="text-secondary"> {% trans 'Add also reverse record' %}</span>
     </span>
