--- a/templates/edit.html
+++ b/templates/edit.html
@@ -23,8 +23,12 @@
     {{ pagination | raw }}
 </div>
 
-{% if records == "-1" %}
-<p>{% trans 'This zone does not have any records. Weird.' %}</p>
+{% if not records %}
+<table class="table table-striped table-hover table-sm">
+    <tr>
+        <td>{% trans 'This zone does not have any records.' %}</td>
+    </tr>
+</table>
 {% else %}
 <form method="post" action="">
     <table class="table table-striped table-hover table-sm">
@@ -84,7 +88,7 @@
                 </select>
             </td>
             <td><input class="form-control form-control-sm" type="text"
-                                        name="record[{{ r['id'] }}][content]" value="{{ r['content'] }}"></td>
+                       name="record[{{ r['id'] }}][content]" value="{{ r['content'] }}"></td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="text"
                                         id="priority_field_{{ r['id'] }}" name="record[{{ r['id'] }}][prio]"
                                         value="{{ r['prio'] }}"></td>
@@ -160,7 +164,9 @@
             <td>{% trans 'TTL' %}</td>
         </tr>
         <tr>
-            <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="">.{{ idn_zone_name ?: zone_name }}</td>
+            <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="">.{{
+                idn_zone_name ?: zone_name }}
+            </td>
             <td>IN</td>
             <td class="col-sm-1">
                 <select class="form-select form-select-sm" name="type">
@@ -183,7 +189,8 @@
                 <div class="invalid-feedback">{% trans 'Provide content' %}</div>
             </td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="prio" value=""></td>
-            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="ttl" value="{{ dns_ttl }}" required>
+            <td class="col-sm-1"><input class="form-control form-control-sm" type="text" name="ttl"
+                                        value="{{ dns_ttl }}" required>
                 <div class="invalid-feedback">{% trans 'Provide TTL' %}</div>
             </td>
         </tr>
@@ -198,9 +205,8 @@
     </span>
     {% endif %}
 </form>
-{% endif %}
-
 <hr>
+{% endif %}
 {% endif %}
 
 {% if perm_zone_master_add %}
