Added missing navigation breadcrumbs.

--- a/templates/add_supermaster.html
+++ b/templates/add_supermaster.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Supermasters' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Add supermaster' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Add supermaster' %}</h5>
 <form class="needs-validation" method="post" action="add_supermaster.php" novalidate>
     <div class="col-sm-3">
