--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -1,3 +1,10 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Supermasters' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'List supermasters' %}</h5>
 <table class="table table-striped table-hover table-sm">
     {% if supermasters %}
