--- a/templates/delete_domains.html
+++ b/templates/delete_domains.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete Zones' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Delete zones' %}</h5>
 <form method="post" action="delete_domains.php">
     <table class="table table-striped table-hover table-sm">
