--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -1,7 +1,22 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item"><a href="edit.php?id={{ zone_id }}">
+            {% if idn_zone_name %}
+            {{ idn_zone_name }}
+            {% else %}
+            {{ zone_name }}
+            {% endif %}
+        </a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete Record' %}</li>
+    </ol>
+</nav>
+
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ idn_zone_name }}</a>" ({{ zone_name }})</h5>
+<h5 class="mb-3">{% trans 'Delete record in zone' %} "{{ idn_zone_name }}" ({{ zone_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h5>
+<h5 class="mb-3">{% trans 'Delete record in zone' %} "{{ zone_name }}"</h5>
 {% endif %}
 
 <table class="table table-striped table-sm">
