Show converted idn zone names in delete domains window.

--- a/templates/delete_domains.html
+++ b/templates/delete_domains.html
@@ -20,7 +20,13 @@
         {% for zone in zones %}
         <tr>
             <input type="hidden" name="zone_id[]" value="{{ zone['id'] }}">
-            <td>{{ zone['name'] }}</td>
+            <td>
+                {% if zone['idn_zone_name'] %}
+                {{ zone['idn_zone_name'] }} ({{ zone['name'] }})
+                {% else %}
+                {{ zone['name'] }}
+                {% endif %}
+            </td>
             <td>{{ zone['owner'] }}</td>
             <td>{{ zone['type'] }}</td>
 
