--- a/templates/edit.html
+++ b/templates/edit.html
@@ -29,6 +29,7 @@
         <td>{% trans 'This zone does not have any records.' %}</td>
     </tr>
 </table>
+<hr/>
 {% else %}
 <form method="post" action="">
     <table class="table table-striped table-hover table-sm">
@@ -149,6 +150,7 @@
     {% endif %}
 </form>
 <hr>
+{% endif %}
 
 {% if perm_edit == "all" or (perm_edit == "own" or perm_edit == "own_as_client") and user_is_zone_owner == "1" %}
 {% if domain_type != "SLAVE" %}
@@ -207,9 +209,8 @@
 </form>
 <hr>
 {% endif %}
-{% endif %}
 
-{% if perm_zone_master_add %}
+{% if perm_zone_master_add and domain_type != "SLAVE"%}
 <form method="post" action="">
     <table>
         <tr>
