--- a/templates/delete_supermaster.html
+++ b/templates/delete_supermaster.html
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
-        <li class="breadcrumb-item"><a href="index.php">{% trans 'Supermasters' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_supermasters.php">{% trans 'Supermasters' %}</a></li>
         <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete supermaster' %}</li>
     </ol>
 </nav>
