--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="users.php">{% trans 'Users' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete user' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Delete user' %} "{{ name }}"</h5>
 <form method="post" action="">
     <table class="table table-striped table-sm">
