--- a/templates/delete_zone_templ.html
+++ b/templates/delete_zone_templ.html
@@ -1,4 +1,15 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans 'Zone templates' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete template' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Delete zone template' %} "{{ templ_name }}"</h5>
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_zone_templ.php?id={{ zone_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_zone_templ.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-primary btn-sm"
+       onClick="location.href='delete_zone_templ.php?id={{ zone_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_zone_templ.php'"
+       value="{% trans 'No' %}">
