--- a/templates/delete_zone_templ_record.html
+++ b/templates/delete_zone_templ_record.html
@@ -1,3 +1,13 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans 'Zone templates' %}</a></li>
+        <li class="breadcrumb-item"><a href="edit_zone_templ.php?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Delete record' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Delete record in zone template' %} "{{ templ_details['name'] }}"</h5>
 
 <table class="table table-striped table-sm">
