--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -1,4 +1,24 @@
-<h5>{% trans 'Edit comment in zone' %} {{ zone_name }}</h5>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item">
+            {% if idn_zone_name %}
+            <a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>
+            {% else %}
+            <a href="edit.php?id={{ zone_id }}">{{ zone_name }}</a>
+            {% endif %}
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Edit comment' %}</li>
+    </ol>
+</nav>
+
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans 'Edit comment in zone' %} "{{ idn_zone_name }}" ({{ zone_name }})</h5>
+{% else %}
+<h5 class="mb-3">{% trans 'Edit comment in zone' %} "{{ zone_name }}"</h5>
+{% endif %}
+
 <form method="post" action="edit_comment.php?id={{ zone_id }}">
     <div>
         <label for="floatingTextarea"></label>
