--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -1,3 +1,13 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans 'Zone templates' %}</a></li>
+        <li class="breadcrumb-item">{{ templ_details['name'] }}</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Edit template' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Edit zone template' %} "{{templ_details['name']}}"</h5>
 <div>
     {{ pagination | raw }}
