--- a/templates/edit_zone_templ_record.html
+++ b/templates/edit_zone_templ_record.html
@@ -1,3 +1,13 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans 'Zone templates' %}</a></li>
+        <li class="breadcrumb-item"><a href="edit_zone_templ.php?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Edit record' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Edit record in zone template' %} "{{ templ_details['name'] }}"</h5>
 <form class="needs-validation" method="post"
       action="edit_zone_templ_record.php?zone_templ_id={{ zone_templ_id }}&id={{ record_id }}" novalidate>
