--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Zone templates' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Zone templates for' %} "{{ user_name }}"</h5>
 <table class="table table-striped table-hover table-sm">
     <thead>
