--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -18,11 +18,11 @@
     <tbody>
     {% for template in permission_templates %}
         <tr>
-            <td>{{ template['name'] }}</td>
-            <td>{{ template['descr'] }}</td>
+            <td class="col-sm-2">{{ template['name'] }}</td>
+            <td class="col-sm-3">{{ template['descr'] }}</td>
             <td>
-                <a class="btn btn-outline-primary btn-sm" href="edit_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans 'Edit template' %}</a>
-                <a class="btn btn-outline-danger btn-sm" href="delete_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans 'Delete template' %}</a>
+                <a class="btn btn-outline-primary btn-sm" href="edit_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans 'Edit' %}</a>
+                <a class="btn btn-outline-danger btn-sm" href="delete_perm_templ.php?id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans 'Delete' %}</a>
         </tr>
     {% endfor %}
     </tbody>
