--- a/templates/add_zone_slave.html
+++ b/templates/add_zone_slave.html
@@ -29,9 +29,21 @@
                 <select class="form-select form-select-sm" name="owner">
                     {% for user in users %}
                     {% if user['id'] == session_user_id %}
-                    <option value="{{ user['id'] }}" selected>{{ user['fullname'] }}</option>
+                    <option value="{{ user['id'] }}" selected>
+                        {% if user['fullname'] %}
+                        {{ user['fullname'] }}
+                        {% else %}
+                        {{ user['username'] }}
+                        {% endif %}
+                    </option>
                     {% elseif perm_view_others %}
-                    <option value="{{ user['id'] }}">{{ user['fullname'] }}</option>
+                    <option value="{{ user['id'] }}">
+                        {% if user['fullname'] %}
+                        {{ user['fullname'] }}
+                        {% else %}
+                        {{ user['username'] }}
+                        {% endif %}
+                    </option>
                     {% endif %}
                     {% endfor %}
                 </select>
