--- a/templates/search.html
+++ b/templates/search.html
@@ -73,8 +73,7 @@
             <td>{{ zone['count_records'] }}</td>
             <td>{{ zone['fullname'] }}</td>
             <td>
-                {% if edit_permission == 'all' or edit_permission == 'own' and zone['user_id'] == user_id %}
-                <?php && do_hook('verify_user_is_owner_zoneid', $zone['id'])): ?>
+                {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and zone['user_id'] == user_id) %}
                 <a class="btn btn-outline-primary btn-sm"
                    href="edit.php?name={{ zone['name'] }}&id={{ zone['id'] }}">
                     <i class="bi bi-pencil-square"></i> {% trans 'Edit zone' %}</a>
@@ -118,8 +117,7 @@
             <td>{{ record['content'] }}</td>
             <td>{{ record['ttl'] }}</td>
             <td>
-                {% if edit_permission == 'all' or edit_permission == 'own' and record['user_id'] == user_id %}
-                <?php if do_hook('verify_user_is_owner_zoneid', $record['domain_id'])): ?>
+                {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and record['user_id'] == user_id) %}
                 <a class="btn btn-outline-primary btn-sm"
                    href="edit_record.php?domain={{ record['domain_id'] }}&id={{ record['id'] }}">
                     <i class="bi bi-pencil-square"></i> {% trans 'Edit zone' %}</a>
