Hide button if user has no rights.

--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -29,5 +29,7 @@
 </table>
 
 <div>
+    {% if templ_perm_add %}
     <a class="btn btn-primary btn-sm" href="add_perm_templ.php">{% trans 'Add permission template' %}</a>
+    {% endif %}
 </div>
