--- a/templates/users.html
+++ b/templates/users.html
@@ -46,7 +46,7 @@
             <td><input class="form-control form-control-sm" type="text" name="user[{{ user['uid'] }}][fullname]" value="{{ user ['fullname'] }}"></td>
             <td><input class="form-control form-control-sm" type="text" name="user[{{ user['uid'] }}][email]" value="{{ user ['email'] }}"></td>
             <td>
-                {% if permissions['templ_perm_edit'] %}
+                {% if permissions['user_edit_templ_perm'] %}
                 <select class="form-select form-select-sm" name="user[{{ user['uid'] }}][templ_id]">
                     {% for template in perm_templates %}
                     {% if template['id'] == user['tpl_id'] %}
