--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -23,8 +23,10 @@
                        required></td>
         </tr>
         <tr>
-            <td>{% trans 'Password' %}</td>
-            <td><input class="form-control form-control-sm" type="password" name="password"></td>
+            <td>{% trans 'Password' %}</td> {{ user['uid'] }} {{ session_user_id }} {{ edit_own_perm }}
+            <td><input class="form-control form-control-sm" type="password" name="password"
+                       {% if not perm_passwd_edit_others and (edit_own_perm and user['uid'] != session_user_id) %}disabled{% endif %}>
+            </td>
         </tr>
         <tr>
             <td>{% trans 'Email address' %}</td>
