--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -1,6 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
         <li class="breadcrumb-item">
             {% if idn_zone_name %}
             <a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>
