--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -1,6 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
         <li class="breadcrumb-item"><a href="edit.php?id={{ zid }}">
             {% if idn_zone_name %}
             {{ idn_zone_name }}
@@ -31,7 +32,7 @@
         </tr>
         </thead>
         <tr>
-            {% if zone_type == "SLAVE" or perm_edit == "none" or perm_edit == "own" or perm_edit == "own_as_client" and user_is_zone_owner == "0" %}
+            {% if zone_type == "SLAVE" or perm_edit == "none" or (perm_edit == "own" or perm_edit == "own_as_client") and user_is_zone_owner == "0" %}
             <td>{{ record["name"] }}</td>
             <td>IN</td>
             <td>{{ record["type"] }}</td>
