--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -15,15 +15,18 @@
                 <div class="invalid-feedback">{% trans 'Provide user name' %}</div>
             </td>
         </tr>
-
         <tr>
             <td>{% trans 'Fullname' %}</td>
             <td><input class="form-control form-control-sm" type="text" name="fullname" value="{{ fullname }}"></td>
         </tr>
         <tr>
             <td>{% trans 'Password' %}</td>
-            <td><input class="form-control form-control-sm" id="password" name="password" value="" {% if not ldap_use %}required{% endif %}>
-                {% if not ldap_use %}<div class="invalid-feedback">{% trans 'Provide user password' %}</div>{% endif %}
+            <td>
+                <div class="input-group">
+                    <input class="form-control form-control-sm" type="password" id="password" name="password" value="" {% if not ldap_use %}required{% endif %}>
+                    <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('password', 'eye')"><i class="bi bi-eye-fill" id="eye"></i></button>
+                    {% if not ldap_use %}<div class="invalid-feedback">{% trans 'Provide user password' %}</div>{% endif %}
+                </div>
             </td>
         </tr>
         <tr>
