--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -10,18 +10,27 @@
     <div class="row g-2 col-sm-4">
         <div>
             <label for="current_password" class="form-label">{% trans 'Current password' %}</label>
-            <input type="password" class="form-control form-control-sm" id="current_password" name="old_password" value="" required>
-            <div class="invalid-feedback">{% trans 'Provide current password' %}</div>
+            <div class="input-group">
+                <input type="password" class="form-control form-control-sm" id="current_password" name="old_password" value="" required>
+                <div class="invalid-feedback">{% trans 'Provide current password' %}</div>
+                <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('current_password', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
+            </div>
         </div>
         <div>
             <label for="new_password" class="form-label">{% trans 'New password' %}</label>
-            <input type="password" class="form-control form-control-sm" id="new_password" name="new_password" value="" required>
-            <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
+            <div class="input-group">
+                <input type="password" class="form-control form-control-sm" id="new_password" name="new_password" value="" required>
+                <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
+                <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('new_password', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
+            </div>
         </div>
         <div>
             <label for="repeat_password" class="form-label">{% trans 'Repeat password' %}:</label>
-            <input type="password" class="form-control form-control-sm" id="repeat_password" name="new_password2" value="" required>
-            <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
+            <div class="input-group">
+                <input type="password" class="form-control form-control-sm" id="repeat_password" name="new_password2" value="" required>
+                <div class="invalid-feedback">{% trans 'Provide new password' %}</div>
+                <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('repeat_password', 'eye3')"><i class="bi bi-eye-fill" id="eye3"></i></button>
+            </div>
         </div>
         <div>
             <input type="submit" class="btn btn-primary btn-sm" name="submit" value="{% trans 'Change password' %}">
