Simplified action names.

--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -43,6 +43,6 @@
         </tbody>
     </table>
     <div class="pt-3">
-        <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Commit changes{% endtrans %}">
+        <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}">
     </div>
 </form>
