--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -27,8 +27,8 @@
     </div>
     <div class="pt-3">
         {% if not disabled %}
-        <input type="submit" name="commit" value="{% trans %}Commit changes{% endtrans %}" class="btn btn-primary btn-sm">
-        <input type="reset" name="reset" value="{% trans %}Reset changes{% endtrans %}" class="btn btn-secondary btn-sm">
+        <input type="submit" name="commit" value="{% trans %}Update{% endtrans %}" class="btn btn-primary btn-sm">
+        <input type="reset" name="reset" value="{% trans %}Reset{% endtrans %}" class="btn btn-secondary btn-sm">
         {% endif %}
     </div>
 </form>
