--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -66,8 +66,8 @@
         </tr>
         <tr>
             <td>&nbsp;</td>
-            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Commit changes{% endtrans %}">
-                <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset changes{% endtrans %}">
+            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">
+                <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">
             </td>
     </table>
 </form>
