--- a/templates/edit_zone_templ_record.html
+++ b/templates/edit_zone_templ_record.html
@@ -53,7 +53,7 @@
         </tr>
     </table>
     <p class="pt-3">
-        <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Commit changes{% endtrans %}">&nbsp;&nbsp;
-        <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset changes{% endtrans %}">&nbsp;&nbsp;
+        <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">&nbsp;&nbsp;
+        <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">&nbsp;&nbsp;
     </p>
 </form>
