--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -51,5 +51,5 @@
         {% endfor %}
         </tbody>
     </table>
-    <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Commit changes{% endtrans %}">
+    <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Update{% endtrans %}">
 </form>
