--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -74,6 +74,6 @@
             {% endif %}
         </tr>
     </table>
-    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Commit changes{% endtrans %}">&nbsp;&nbsp;
-    <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset changes{% endtrans %}">&nbsp;&nbsp;
+    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">&nbsp;&nbsp;
+    <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">&nbsp;&nbsp;
 </form>
