--- a/templates/dnssec.html
+++ b/templates/dnssec.html
@@ -44,11 +44,11 @@
         <td>{{ item[2] }}</td>
         <td>{{ algorithms[item[3]] }}</td>
         <td>{{ item[4] }}</td>
-        <td>{% trans active %}</td>
+        <td>{% trans %}%active%{% endtrans %}</td>
         <td>
             <a class="btn btn-outline-primary btn-sm"
                href="dnssec_edit_key.php?id={{ zone_id }}&key_id={{ item[0] }}"><i class="bi bi-pencil-square"></i>
-                {% trans button_title %}</a>
+                {% trans %}%button_title%{% endtrans %}</a>
             <a class="btn btn-outline-danger btn-sm" href="dnssec_delete_key.php?id={{ zone_id }}&key_id={{ item[0] }}"><i
                     class="bi bi-trash"></i> {% trans %}Delete zone key{% endtrans %}</a>
         </td>
