--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -19,6 +19,12 @@
             <label for="templ_descr" class="form-label">{% trans %}Description{% endtrans %}</label>
             <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="{{ templ_descr }}">
         </div>
+        {% if perm_is_godlike %}
+        <div class="mb-2">
+            <input class="form-check-input" type="checkbox" id="templ_global" name="templ_global">
+            <label for="templ_global" class="form-check-label">{% trans %}Everyone could use it (global)?{% endtrans %}</label>
+        </div>
+        {% endif %}
         <div div class="mb-2">
             <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans %}Add zone template{% endtrans %}">
         </div>
