--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -12,6 +12,8 @@
     <tr>
         <th>{% trans %}Name{% endtrans %}</th>
         <th>{% trans %}Description{% endtrans %}</th>
+        <th>{% trans %}Owner{% endtrans %}</th>
+        <th>{% trans %}Type{% endtrans %}</th>
         <th>&nbsp;</th>
     </tr>
     </thead>
@@ -26,7 +28,23 @@
     <tr>
         <td class="col-sm-2">{{ template['name'] }}</td>
         <td class="col-sm-3">{{ template['descr'] }}</td>
-        {% if perm_zone_master_add %}
+        <td class="col-sm-2">
+            {% if template['fullname'] %}
+            {{ template['fullname'] }}
+            {% elseif template['username'] %}
+            {{ template['username'] }}
+            {% else %}
+            -
+            {% endif %}
+        </td>
+        <td col-sm-2>
+            {% if template['username'] %}
+            {% trans %}private{% endtrans %}
+            {% else %}
+            {% trans %}global{% endtrans %}
+            {% endif %}
+        </td>
+        {% if (perm_zone_master_add and template['username']) or perm_is_godlike %}
         <td>
             <a class="btn btn-outline-primary btn-sm" href="edit_zone_templ.php?id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans %}Edit{% endtrans %}</a>
             <a class="btn btn-outline-danger btn-sm" href="delete_zone_templ.php?id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}</a>
