--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -17,18 +17,24 @@
 <div class='text-secondary'>{% trans %}This zone template does not have any records yet.{% endtrans %}</div>
 <br>
 <div><input class="btn btn-primary btn-sm" type="button"
-            onClick="location.href='add_zone_templ_record.php?id={{zone_templ_id}}'" value="{% trans %}Add record{% endtrans %}">
+            onClick="location.href='add_zone_templ_record.php?id={{zone_templ_id}}'"
+            value="{% trans %}Add record{% endtrans %}">
 </div>
 {% else %}
 <form method="post" action="">
     <table class="table table-striped table-hover table-sm">
         <tr>
-            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=name">{% trans %}Name{% endtrans %}</a></th>
-            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=type">{% trans %}Type{% endtrans %}</a></th>
-            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=content">{% trans %}Content{% endtrans %}</a></th>
-            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=prio">{% trans %}Priority{% endtrans %}</a>
+            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=name">{% trans %}Name{% endtrans
+                %}</a></th>
+            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=type">{% trans %}Type{% endtrans
+                %}</a></th>
+            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=content">{% trans %}Content{%
+                endtrans %}</a></th>
+            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=prio">{% trans %}Priority{%
+                endtrans %}</a>
             </th>
-            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=ttl">{% trans %}TTL{% endtrans %}</a></th>
+            <th><a href="edit_zone_templ.php?id=" {{zone_templ_id}}&amp;record_sort_by=ttl">{% trans %}TTL{% endtrans
+                %}</a></th>
             <th>&nbsp;</th>
         </tr>
         {% for record in records %}
@@ -61,7 +67,8 @@
             </td>
         </tr>
     </table>
-    <input class="btn btn-secondary btn-sm" type="submit" name="update_zones" value="{% trans %}Update zones{% endtrans %}">
+    <input class="btn btn-secondary btn-sm" type="submit" name="update_zones"
+           value="{% trans %}Update zones{% endtrans %}">
 
     <table>
         <tr>
@@ -71,8 +78,10 @@
             <td colspan="6">{% trans %}The following placeholders can be used in template records{% endtrans %}</td>
         </tr>
         <tr>
-            <td colspan="6"><br>&nbsp;&nbsp;&nbsp;&nbsp; * [ZONE] - {% trans %}substituted with current zone name{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [SERIAL] - {% trans %}substituted with current date and 2 numbers{% endtrans %}
+            <td colspan="6"><br>&nbsp;&nbsp;&nbsp;&nbsp; * [ZONE] - {% trans %}substituted with current zone name{%
+                endtrans %}<br>
+                &nbsp;&nbsp;&nbsp;&nbsp; * [SERIAL] - {% trans %}substituted with current date and 2 numbers{% endtrans
+                %}
                 (YYYYMMDD + 00)<br>
                 &nbsp;&nbsp;&nbsp;&nbsp; * [NS1] - {% trans %}substituted with 1st name server{% endtrans %}<br>
                 &nbsp;&nbsp;&nbsp;&nbsp; * [NS2] - {% trans %}substituted with 2nd name server{% endtrans %}<br>
@@ -115,8 +124,9 @@
 <!--    </table>-->
 <!--    <input class="btn btn-secondary btn-sm" type="submit" name="save_as" value="{% trans %}Save as template{% endtrans %}">-->
 <!--</form>-->
-<hr>
+{% endif %}
 
+<hr>
 <form class="needs-validation" method="post" action="" novalidate>
     <table>
         <tr>
@@ -132,11 +142,17 @@
             <td><input class="form-control form-control-sm" type="text" name="templ_descr"
                        value="{{templ_details['descr']}}"></td>
         </tr>
+        {% if perm_is_godlike %}
+        <tr>
+            <td colspan="2">
+                <input class="form-check-input" type="checkbox" id="templ_global" name="templ_global" {% if templ_details['owner'] == 0 %}checked{% endif %}>
+                <label for="templ_global" class="form-check-label">
+                    {% trans %}Everyone could use it (global)?{% endtrans %}</label>
+            </td>
+        </tr>
+        {% endif %}
     </table>
     <div class="pt-3">
         <input class="btn btn-primary btn-sm" type="submit" name="edit" value="{% trans %}Update{% endtrans %}">
     </div>
 </form>
-<div class="pt-3">
-    {% endif %}
-</div>
