--- a/templates/edit.html
+++ b/templates/edit.html
@@ -32,6 +32,7 @@
 <hr>
 {% else %}
 <form method="post" action="">
+    <input type="hidden" name="serial" value="{{ serial }}">
     <table class="table table-striped table-hover table-sm">
         <tr>
             <th><a href="edit.php?id={{ zone_id }}&record_sort_by=id">{% trans %}Id{% endtrans %}</a>
